--- a/docs/src/content/docs/guides/i18n.md
+++ b/docs/src/content/docs/guides/i18n.md
@@ -1,13 +1,13 @@
 ---
-title: Internationalization (i18n)
-description: Learn how to configure your Starlight site to support multiple languages.
+title: Internacionalización (i18n)
+description: Aprende a configurar tu sitio Starlight para admitir varios idiomas.
 ---
 
 Starlight provides built-in support for multilingual sites, including routing, fallback content, and full right-to-left (RTL) language support.
 
-## Configure i18n
+## Configura i18n
 
-1. Tell Starlight about the languages you support by passing `locales` and `defaultLocale` to the Starlight integration:
+1. Dile a Starlight sobre los idiomas que admites pasando `locales` y `defaultLocale` a la integración de Starlight:
 
    ```js
    // astro.config.mjs
@@ -18,19 +18,19 @@ Starlight provides built-in support for multilingual sites, including routing, f
      integrations: [
        starlight({
          title: 'My Docs',
-         // Set English as the default language for this site.
+         // Establece el inglés como el idioma predeterminado para este sitio.
          defaultLocale: 'en',
          locales: {
-           // English docs in `src/content/docs/en/`
+           // Documentación en inglés en `src/content/docs/en/`
            en: {
              label: 'English',
            },
-           // Simplified Chinese docs in `src/content/docs/zh/`
+           // Chino simplificado en `src/content/docs/zh/`
            zh: {
              label: '简体中文',
              lang: 'zh-CN',
            },
-           // Arabic docs in `src/content/docs/ar/`
+           // Documentación en árabe en `src/content/docs/ar/`
            ar: {
              label: 'العربية',
              dir: 'rtl',
@@ -41,10 +41,11 @@ Starlight provides built-in support for multilingual sites, including routing, f
    });
    ```
 
-   Your `defaultLocale` will be used for fallback content and UI labels, so choose the language you are most likely to start writing content in, or already have content for.
+   Tu `defaultLocale` se utilizará para el contenido y las etiquetas de la interfaz de usuario de respaldo, por lo que elige el idioma en el que es más probable que comiences a escribir contenido o que ya tengas contenido.
 
-2. Create a directory for each language in `src/content/docs/`.
-   For example, assuming the configuration shown in step 1, this might look like:
+2. Crea un directorio para cada idioma en `src/content/docs/`.
+   Por ejemplo, suponiendo la configuración mostrada en el paso 1, esto podría verse así:
+
 
    - src/
      - content/
@@ -53,13 +54,13 @@ Starlight provides built-in support for multilingual sites, including routing, f
          - en/
          - zh/
 
-3. You can now create content files in your language directories. Use the same file name to tie pages together across languages. For example, `ar/index.md` and `en/index.md` would represent the homepage for Arabic and English respectively.
+3. Ahora puede crear archivos de contenido en los directorios de su idioma. Utilice el mismo nombre de archivo para vincular páginas en todos los idiomas. Por ejemplo, `ar/index.md` y `en/index.md` representarían la página de inicio para árabe e inglés respectivamente.
 
-### Use a root locale
+### Usa una raíz de configuración regional
 
-You can use a “root” locale to serve a language without any i18n prefix in its path. For example, if English is your root locale, an English page path might look like `/about` instead of `/en/about`.
+Puedes usar una raíz de configuración regional para servir un idioma sin ningún prefijo i18n en su ruta. Por ejemplo, si el inglés es su configuración regional, una ruta de página en inglés podría verse como `/about` en lugar de `/en/about`.
 
-To set a root locale, use the `root` key in your `locales` config. If the root locale is also the default locale for your content, remove `defaultLocale` or set it to `'root'`.
+Para establecer una configuración regional, use la clave `root` en su configuración de `locales`. Si la configuración regional raíz también es la configuración regional predeterminada para su contenido, elimine `defaultLocale` o configúrelo en `'root'`.
 
 ```js
 // astro.config.mjs
@@ -70,11 +71,11 @@ export default defineConfig({
   integrations: [
     starlight({
       title: 'My Docs',
-      defaultLocale: 'root', // optional
+      defaultLocale: 'root', // opcional
       locales: {
         root: {
           label: 'English',
-          lang: 'en', // lang is required for root locales
+          lang: 'en', // lang es obligatorio para los locales raíz
         },
         zh: {
           label: '简体中文',
@@ -86,7 +87,7 @@ export default defineConfig({
 });
 ```
 
-When using a `root` locale, place pages for that language directly in `src/content/docs/` instead of in a dedicated language folder. For example, here are the home page files for English and Chinese when using the config above:
+Cuando uses una `root` locale, coloca las páginas para ese idioma directamente en `src/content/docs/` en lugar de en una carpeta de idioma dedicada. Por ejemplo, aquí están los archivos de la página de inicio para inglés y chino cuando se usa la configuración anterior:
 
 - src/
   - content/
@@ -95,26 +96,27 @@ When using a `root` locale, place pages for that language directly in `src/conte
       - zh/
         - index.md
 
-#### Monolingual sites
+#### Sitios monolingües
 
-If you have a single language site, you can set the root locale to configure its language.
-This allows you to override Starlight’s default language, which is English, but won’t enable other internationalization features like the language picker.
+Si tienes un sitio de un solo idioma, puedes establecer la configuración regional raíz para configurar su idioma.
 
-## Fallback content
+Esto te permite anular el idioma predeterminado de Starlight, que es el inglés, pero no habilitará otras funciones de internacionalización como el selector de idioma.
 
-Starlight expects you to create equivalent pages in all your languages. For example, if you have an `en/about.md` file, you should create an `about.md` for each other language you support.
+## Contenido de respaldo
 
-If a translation is not yet available for a language, Starlight will show readers the content for that page in the default language (set via `defaultLocale`). For example, if you have not yet created a French version of an about page and your default language is English, visitors to `/fr/about` will see the English content. This helps you add content in your default language and then progressively translate it when your translators have time.
+Starlight espera que crees páginas equivalentes en todos tus idiomas. Por ejemplo, si tienes un archivo `en/about.md`, debes crear un `about.md` para cada otro idioma que admitas.
 
-## Translate Starlight’s UI
+Si una traducción no está disponible para un idioma, Starlight mostrará a los lectores el contenido de esa página en el idioma predeterminado (establecido a través de `defaultLocale`). Por ejemplo, si aún no ha creado una versión en francés de una página Acerca de y su idioma predeterminado es el inglés, los visitantes a `/fr/about` verán el contenido en inglés. Esto le ayuda a agregar contenido en su idioma predeterminado y luego traducirlo progresivamente cuando sus traductores tengan tiempo.
 
-Some of Starlight’s default UI requires text labels to work.
-For example, the table of contents on this page has an “On this page” heading in English.
-We aim to ship these labels in as many languages as possible but currently only have support for English, German, Japanese, and Spanish.
+## Traduce la interfaz de usuario de Starlight
 
-You can provide translations for additional languages you support — or override our default labels — via the `i18n` data collection.
+Algunos de los elementos de la interfaz de usuario de Starlight requieren etiquetas de texto para funcionar.
+Por ejemplo, la tabla de contenido de esta página tiene un encabezado "En esta página" en inglés.
+Nosotros apuntamos a enviar estas etiquetas en tantos idiomas como sea posible, pero actualmente solo tenemos soporte para inglés, alemán, japonés y español.
 
-1. Configure the `i18n` data collection in `src/content/config.ts` if it isn’t configured already:
+Puedes proporcionar traducciones para los idiomas adicionales que admites, o anular nuestras etiquetas predeterminadas, a través de la colección de datos `i18n`.
+
+1. Configura la colección de datos `i18n` en `src/content/config.ts` si aún no está configurada:
 
    ```js
    import { defineCollection } from 'astro:content';
@@ -126,8 +128,8 @@ You can provide translations for additional languages you support — or overrid
    };
    ```
 
-2. Create a JSON file in `src/content/i18n/` for each locale you want to translate Starlight’s UI for.
-   For example, this would add translation files for Arabic and Simplified Chinese:
+2. Crea un archivo JSON en `src/content/i18n/` para cada idioma al que quieras traducir la interfaz de usuario de Starlight.
+   Por ejemplo, esto agregaría archivos de traducción para árabe y chino simplificado:
 
    - src/
      - content/
@@ -135,7 +137,7 @@ You can provide translations for additional languages you support — or overrid
          - ar.json
          - zh-CN.json
 
-3. Add translations for the keys you want to translate to the JSON files. You can use the English defaults to help you translate:
+3. Agrega traducciones para las claves que deseas traducir a los archivos JSON. Puedes usar los valores predeterminados en inglés para ayudarte a traducir:
 
    ```json
    {
