docs: link to frontmatter reference from getting-started

--- a/docs/src/content/docs/es/getting-started.mdx
+++ b/docs/src/content/docs/es/getting-started.mdx
@@ -53,7 +53,7 @@ Starlight admite la creación de contenido en Markdown y MDX.
 
 Puedes agregar nuevas páginas creando archivos `.md` o `.mdx` en la carpeta `src/content/docs/`. Por ejemplo, el archivo `src/content/docs/hello-world.md` estará disponible en tu sitio en la ruta `/hello-world`.
 
-Todas las páginas de Starlight comparten un conjunto común de propiedades frontmatter que puedes establecer para controlar cómo se muestra la página:
+Todas las páginas de Starlight comparten un [conjunto común de propiedades frontmatter](/es/reference/frontmatter/) que puedes establecer para controlar cómo se muestra la página:
 
 ```md
 ---
