--- a/docs/src/content/docs/getting-started.mdx
+++ b/docs/src/content/docs/getting-started.mdx
@@ -54,7 +54,7 @@ Starlight supports authoring content in Markdown and MDX.
 
 You can add new pages by creating `.md` or `.mdx` files in `src/content/docs/`. For example, `src/content/docs/hello-world.md` will be available on your site at `/hello-world`.
 
-All Starlight pages share a common set of frontmatter properties you can set to control how the page appears:
+All Starlight pages share a [common set of frontmatter properties](/reference/frontmatter/) you can set to control how the page appears:
 
 ```md
 ---
