--- a/docs/src/content/docs/es/guides/i18n.md
+++ b/docs/src/content/docs/es/guides/i18n.md
@@ -3,11 +3,11 @@ title: Internacionalización (i18n)
 description: Aprende a configurar tu sitio Starlight para admitir varios idiomas.
 ---
 
-Starlight provides built-in support for multilingual sites, including routing, fallback content, and full right-to-left (RTL) language support.
+Starlight proporciona soporte incorporado para sitios multilingües, incluidas las rutas, el contenido de respaldo y el soporte completo de idiomas de derecha a izquierda (RTL).
 
 ## Configura i18n
 
-1. Dile a Starlight sobre los idiomas que admites pasando `locales` y `defaultLocale` a la integración de Starlight:
+1. Indícale a Starlight los idiomas que admites pasando `locales` y `defaultLocale` a la integración de Starlight:
 
    ```js
    // astro.config.mjs
@@ -41,7 +41,7 @@ Starlight provides built-in support for multilingual sites, including routing, f
    });
    ```
 
-   Tu `defaultLocale` se utilizará para el contenido y las etiquetas de la interfaz de usuario de respaldo, por lo que elige el idioma en el que es más probable que comiences a escribir contenido o que ya tengas contenido.
+   Tu `defaultLocale` se utilizará para el contenido y las etiquetas de la UI de respaldo, por lo que elige el idioma en el que es más probable que comiences a escribir contenido o que ya tengas contenido.
 
 2. Crea un directorio para cada idioma en `src/content/docs/`.
    Por ejemplo, suponiendo la configuración mostrada en el paso 1, esto podría verse así:
@@ -54,13 +54,13 @@ Starlight provides built-in support for multilingual sites, including routing, f
          - en/
          - zh/
 
-3. Ahora puede crear archivos de contenido en los directorios de su idioma. Utilice el mismo nombre de archivo para vincular páginas en todos los idiomas. Por ejemplo, `ar/index.md` y `en/index.md` representarían la página de inicio para árabe e inglés respectivamente.
+3. Ahora puedes crear archivos de contenido en los directorios de tu idioma. Utiliza el mismo nombre de archivo para vincular páginas en todos los idiomas. Por ejemplo, `ar/index.md` y `en/index.md` representarían la página de inicio para árabe e inglés respectivamente.
 
 ### Usa una raíz de configuración regional
 
-Puedes usar una raíz de configuración regional para servir un idioma sin ningún prefijo i18n en su ruta. Por ejemplo, si el inglés es su configuración regional, una ruta de página en inglés podría verse como `/about` en lugar de `/en/about`.
+Puedes usar una raíz de configuración regional para servir un idioma sin ningún prefijo i18n en tu ruta. Por ejemplo, si el inglés es tu configuración regional, una ruta de página en inglés podría verse como `/about` en lugar de `/en/about`.
 
-Para establecer una configuración regional, use la clave `root` en su configuración de `locales`. Si la configuración regional raíz también es la configuración regional predeterminada para su contenido, elimine `defaultLocale` o configúrelo en `'root'`.
+Para establecer una configuración regional, usa la clave `root` en tu configuración de `locales`. Si la configuración regional raíz también es la configuración regional predeterminada para tu contenido, elimina `defaultLocale` o configúralo en `'root'`.
 
 ```js
 // astro.config.mjs
@@ -98,19 +98,19 @@ Cuando uses una `root` locale, coloca las páginas para ese idioma directamente 
 
 #### Sitios monolingües
 
-Si tienes un sitio de un solo idioma, puedes establecer la configuración regional raíz para configurar su idioma.
+Si tienes un sitio de un solo idioma, puedes establecer la configuración regional raíz para configurar tu idioma.
 
-Esto te permite anular el idioma predeterminado de Starlight, que es el inglés, pero no habilitará otras funciones de internacionalización como el selector de idioma.
+Esto te permite anular el idioma predeterminado de Starlight, que es el inglés, pero no habilitará otras funciones de internacionalización como el selector de idiomas.
 
 ## Contenido de respaldo
 
 Starlight espera que crees páginas equivalentes en todos tus idiomas. Por ejemplo, si tienes un archivo `en/about.md`, debes crear un `about.md` para cada otro idioma que admitas.
 
-Si una traducción no está disponible para un idioma, Starlight mostrará a los lectores el contenido de esa página en el idioma predeterminado (establecido a través de `defaultLocale`). Por ejemplo, si aún no ha creado una versión en francés de una página Acerca de y su idioma predeterminado es el inglés, los visitantes a `/fr/about` verán el contenido en inglés. Esto le ayuda a agregar contenido en su idioma predeterminado y luego traducirlo progresivamente cuando sus traductores tengan tiempo.
+Si una traducción no está disponible para un idioma, Starlight mostrará a los lectores el contenido de esa página en el idioma predeterminado (establecido a través de `defaultLocale`). Por ejemplo, si aún no has creado una versión en francés de una página Acerca de y tu idioma predeterminado es el inglés, los visitantes a `/fr/about` verán el contenido en inglés. Esto te ayuda a agregar contenido en tu idioma predeterminado y luego traducirlo progresivamente cuando tus traductores tengan tiempo.
 
-## Traduce la interfaz de usuario de Starlight
+## Traduce la UI de Starlight
 
-Algunos de los elementos de la interfaz de usuario de Starlight requieren etiquetas de texto para funcionar.
+Algunos de los elementos de la UI de Starlight requieren etiquetas de texto para funcionar.
 Por ejemplo, la tabla de contenido de esta página tiene un encabezado "En esta página" en inglés.
 Nosotros apuntamos a enviar estas etiquetas en tantos idiomas como sea posible, pero actualmente solo tenemos soporte para inglés, alemán, japonés y español.
 
@@ -128,7 +128,7 @@ Puedes proporcionar traducciones para los idiomas adicionales que admites, o anu
    };
    ```
 
-2. Crea un archivo JSON en `src/content/i18n/` para cada idioma al que quieras traducir la interfaz de usuario de Starlight.
+2. Crea un archivo JSON en `src/content/i18n/` para cada idioma al que quieras traducir la UI de Starlight.
    Por ejemplo, esto agregaría archivos de traducción para árabe y chino simplificado:
 
    - src/
