--- a/docs/src/content/docs/guides/project-structure.mdx
+++ b/docs/src/content/docs/guides/project-structure.mdx
@@ -3,16 +3,18 @@ title: Project Structure
 description: Learn how to organize files in your Starlight project.
 ---
 
-This guide will show you how a Starlight project is organized and what different files in your project do. Starlight projects generally follow the same file and directory structure as other Astro projects. See [Astro’s project structure documentation](https://docs.astro.build/en/core-concepts/project-structure/) for more detail.
+This guide will show you how a Starlight project is organized and what the different files in your project do.
+
+Starlight projects generally follow the same file and directory structure as other Astro projects. See [Astro’s project structure documentation](https://docs.astro.build/en/core-concepts/project-structure/) for more detail.
 
 ## Files and directories
 
 - `astro.config.mjs` — The Astro configuration file; includes the Starlight integration and configuration.
 - `src/content/config.ts` — Content collection configuration file; adds Starlight’s frontmatter schemas to your project.
-- `src/content/docs/` — Content files. Starlight turns each file in this directory into a page on your site.
+- `src/content/docs/` — Content files. Starlight turns each `.md`, `.mdx` or `.mdoc` file in this directory into a page on your site.
 - `src/content/i18n/` (optional) — Translation data to support [internationalization](/guides/i18n/).
-- `src/` — Other project source code (components, styles, etc.)
-- `public/` — Unprocessed, static assets (fonts, favicon, PDFs, etc.)
+- `src/` — Other source code and files (components, styles, images, etc.) for your project.
+- `public/` — Static assets (fonts, favicon, PDFs, etc.)  that will not be processed by Astro.
 
 ## Example project contents
 
