getting-started edits

--- a/docs/src/content/docs/index.mdx
+++ b/docs/src/content/docs/index.mdx
@@ -22,7 +22,7 @@ import AboutAstro from '../../components/about-astro.astro';
 
 <CardGrid stagger>
   <Card title="Documentation that delights" icon="open-book">
-    Includes: Site navigation, search, internationalisation, SEO, easy-to-read
+    Includes: Site navigation, search, internationalization, SEO, easy-to-read
     typography, code highlighting, dark mode and more.
   </Card>
   <Card title="Powered by Astro" icon="rocket">
