markdoc! *shakes fist*
Co-authored-by: Chris Swithinbank <swithinbank@gmail.com>

--- a/docs/src/content/docs/getting-started.mdx
+++ b/docs/src/content/docs/getting-started.mdx
@@ -56,7 +56,7 @@ Starlight is ready for you to add new content, or bring your existing files!
 
 ### File formats
 
-Starlight supports authoring content in Markdown and MDX. (There is experimental support for Markdoc available via the [Astro Markdoc integration](https://docs.astro.build/en/guides/integrations-guide/markdoc/).)
+Starlight supports authoring content in Markdown and MDX. (You can add support for Markdoc by installing the experimental [Astro Markdoc integration](https://docs.astro.build/en/guides/integrations-guide/markdoc/).)
 
 
 ### Add pages
