--- a/docs/src/content/docs/guides/components.mdx
+++ b/docs/src/content/docs/guides/components.mdx
@@ -65,7 +65,7 @@ The code above generates the following tabs on the page:
 
 import { Card, CardGrid } from '@astrojs/starlight/components';
 
-You can display content in a box matching Starlight's styles using the `<Card>` component.
+You can display content in a box matching Starlight’s styles using the `<Card>` component.
 Wrap multiple cards in the `<CardGrid>` component to display cards side-by-side when there’s enough space.
 
 A `<Card>` requires a `title` and can optionally include an `icon` attribute set to the name of [one of Starlight’s built-in icons](https://github.com/withastro/starlight/blob/main/packages/starlight/components/Icons.ts).
@@ -99,7 +99,7 @@ The code above generates the following on the page:
 </CardGrid>
 
 :::tip
-Use a card grid on your home page to display your project's key features.
+Use a card grid on your home page to display your project’s key features.
 Add the `stagger` attribute to shift the second column of cards vertically and add visual interest:
 
 ```astro
