--- a/docs/src/content/docs/es/getting-started.mdx
+++ b/docs/src/content/docs/es/getting-started.mdx
@@ -66,7 +66,7 @@ Agrega nuevas páginas a tu sitio automáticamente creando archivos `.md` o `.md
 `src/content/docs/guides/faq.md` -> `tu-sitio/guides/faq`
 ```
 
-### Frontmatter con tipos de datos seguros
+### Frontmatter con seguridad de tipos
 
 Todas las páginas de Starlight comparten un [conjunto común personalizable de propiedades frontmatter](/es/reference/frontmatter/) para controlar cómo se muestra la página:
 
