--- a/docs/src/content/docs/es/guides/components.mdx
+++ b/docs/src/content/docs/es/guides/components.mdx
@@ -5,9 +5,11 @@ description: Utilizando componentes en MDX con Starlight.
 
 Los componentes te permiten reutilizar fácilmente una parte de la interfaz de usuario o un estilo de manera consistente. Ejemplos podrían incluir una tarjeta de enlace o un incrustado de YouTube. Starlight admite el uso de componentes en archivos [MDX](https://mdxjs.com/) y proporciona algunos componentes comunes para que los utilices.
 
+[Aprende más sobre la construcción de componentes en los docs de Astro](https://docs.astro.build/en/core-concepts/astro-components/).
+
 ## Usando un componente
 
-Puedes utilizar un componente importándolo en tu archivo MDX y luego llamándolo como una etiqueta JSX. Estas etiquetas se ven como etiquetas HTML, pero comienzan con una letra mayúscula que coincide con el nombre en tu declaración de `import`:
+Puedes utilizar un componente importándolo en tu archivo MDX y luego renderizándolo como una etiqueta JSX. Estas etiquetas se ven como etiquetas HTML, pero comienzan con una letra mayúscula que coincide con el nombre en tu declaración de `import`:
 
 ```mdx
 ---
@@ -25,11 +27,11 @@ import OtroComponente from '../../componentes/OtroComponente.astro';
 </OtroComponente>
 ```
 
-Debido a que Starlight está impulsado por Astro, puedes utilizar componentes construidos con cualquier framework UI en tus archivos MDX. Obtén más información sobre [cómo usar componentes en MDX](https://docs.astro.build/es/guides/markdown-content/#usando-componentes-en-mdx) en la documentación de Astro.
+Debido a que Starlight está impulsado por Astro, puedes agregar soporte para componentes construidos con cualquier [framework UI compatible (React, Preact, Svelte, Vue, Solid, Lit y Alpine)](https://docs.astro.build/en/core-concepts/framework-components/) en tus archivos MDX.
 
 ## Componentes integrados
 
-Starlight proporciona componentes integrados para casos de uso comunes en la documentación. Estos componentes están disponibles en el paquete `@astrojs/starlight/components`.
+Starlight proporciona algunos componentes integrados para casos de uso comunes en la documentación. Estos componentes están disponibles en el paquete `@astrojs/starlight/components`.
 
 ### Pestañas
 
@@ -59,7 +61,7 @@ import { Card, CardGrid } from '@astrojs/starlight/components';
 
 Puedes mostrar contenido en una caja que coincida con los estilos de Starlight utilizando el componente `<Card>`. Envuelve varias tarjetas en el componente `<CardGrid>` para mostrar las tarjetas una al lado de la otra cuando hay suficiente espacio.
 
-Un `<Card>` debe tener un `title` y opcionalmente puede incluir un atributo `icon` establecido con el nombre de [uno de los iconos integrados de Starlight](https://github.com/withastro/starlight/blob/main/packages/starlight/components/Icons.ts).
+Un `<Card>` requiere un `title` y opcionalmente puede incluir un atributo `icon` establecido con el nombre de [uno de los iconos integrados de Starlight](https://github.com/withastro/starlight/blob/main/packages/starlight/components/Icons.ts).
 
 ```mdx
 import { Card, CardGrid } from '@astrojs/starlight/components';
