--- a/docs/src/content/docs/fr-FR/guides/project-structure.mdx
+++ b/docs/src/content/docs/fr-FR/guides/project-structure.mdx
@@ -12,7 +12,7 @@ Les projets Starlight suivent généralement la même structure de fichiers et d
 - `astro.config.mjs` — Le fichier de configuration d'Astro ; inclut l'intégration et la configuration de Starlight.
 - `src/content/config.ts` — Fichier de configuration des collections de contenu ; ajoute les schémas de la matière première de Starlight à votre projet.
 - `src/content/docs/` — Fichiers de contenu. Starlight transforme chaque fichier `.md`, `.mdx` ou `.mdoc` de ce répertoire en une page de votre site.
-- `src/content/i18n/` (optionnel) — Données de traduction pour prendre en charge l'[internationalisation](/fr-fr/guides/i18n/).
+- `src/content/i18n/` (optionnel) — Données de traduction pour prendre en charge l'[internationalisation](/fr-FR/guides/i18n/).
 - `src/` — Autre code source et fichiers (composants, styles, images, etc.) pour votre projet.
 - `public/` — Actifs statiques (polices, favicon, PDFs, etc.) qui ne seront pas traités par Astro.
 
