--- a/docs/src/content/docs/fr-FR/index.mdx
+++ b/docs/src/content/docs/fr-FR/index.mdx
@@ -18,7 +18,7 @@ hero:
 ---
 
 import { CardGrid, Card } from '@astrojs/starlight/components';
-import AboutAstro from '../../components/about-astro.astro';
+import AboutAstro from '../../../components/about-astro.astro';
 
 <CardGrid stagger>
   <Card title="Une documentation qui enchante" icon="open-book">
