--- a/docs/src/content/docs/fr/index.mdx
+++ b/docs/src/content/docs/fr/index.mdx
@@ -11,7 +11,7 @@ hero:
     - text: Mise en route
       icon: right-arrow
       variant: primary
-      link: /fr-FR/getting-started/
+      link: /fr/getting-started/
     - text: Voir sur GitHub
       icon: external
       link: https://github.com/withastro/starlight
