--- a/docs/src/content/docs/fr/getting-started.mdx
+++ b/docs/src/content/docs/fr/getting-started.mdx
@@ -52,7 +52,7 @@ Essayez Starlight dans votre navigateur :
 
 ## Créer du contenu avec Starlight
 
-Starlight est prêt pour que vous puissiez ajouter du nouveau contenu, ou apporter vos fichiers existants !
+Starlight est conçu pour que vous puissiez ajouter du nouveau contenu, ou apporter vos fichiers existants !
 
 ### Formats de fichiers
 
