--- a/packages/starlight/translations/fr.json
+++ b/packages/starlight/translations/fr.json
@@ -15,6 +15,6 @@
     "i18n.untranslatedContent": "Ce contenu n'est pas encore disponible dans votre langue.",
     "page.editLink": "Editer la page",
     "page.lastUpdated": "Dernière mise à jour :",
-    "page.previousLink": "Suivant",
-    "page.nextLink": "Précédent"
+    "page.previousLink": "Précédent",
+    "page.nextLink": "Suivant"
   }
