--- a/docs/src/content/docs/fr/guides/i18n.mdx
+++ b/docs/src/content/docs/fr/guides/i18n.mdx
@@ -195,7 +195,7 @@ Vous pouvez fournir des traductions pour les langues supplémentaires que vous s
      "i18n.untranslatedContent": "Ce contenu n'est pas encore disponible dans votre langue.",
      "page.editLink": "Editer la page",
      "page.lastUpdated": "Dernière mise à jour :",
-     "page.previousLink": "Suivant",
-     "page.nextLink": "Précédent"
+     "page.previousLink": "Précédent",
+     "page.nextLink": "Suivant"
    }
    ```
