--- a/docs/src/content/docs/getting-started.mdx
+++ b/docs/src/content/docs/getting-started.mdx
@@ -120,3 +120,5 @@ yarn upgrade @astrojs/starlight --latest
 
 </TabItem>
 </Tabs>
+
+You can see a full list of the changes made in each release in [the Starlight Changelog](https://github.com/withastro/starlight/blob/main/packages/starlight/CHANGELOG.md).
