--- a/docs/src/content/docs/es/getting-started.mdx
+++ b/docs/src/content/docs/es/getting-started.mdx
@@ -11,7 +11,9 @@ Starlight se encuentra en una etapa temprana de desarrollo. Si encuentras algo q
 
 ## Creando un nuevo proyecto
 
-Starlight se construye sobre el framework todo en uno [Astro](https://astro.build). Puedes crear un nuevo proyecto de Astro + Starlight utilizando el siguiente comando:
+Starlight es un tema de documentación completo construido sobre el framework [Astro](https://astro.build).
+
+Puedes crear un nuevo proyecto de Astro + Starlight utilizando el siguiente comando:
 
 <Tabs>
 <TabItem label="npm">
@@ -40,7 +42,7 @@ yarn create astro --template starlight
 </TabItem>
 </Tabs>
 
-Esto creará un nuevo directorio de proyecto con todos los archivos y configuraciones necesarios para tu sitio.
+Esto creará un nuevo [directorio de proyecto](/es/guides/project-structure/) con todos los archivos y configuraciones necesarios para tu sitio.
 
 :::tip[Míralo en acción]
 Prueba Starlight en tu navegador:
@@ -49,11 +51,24 @@ Prueba Starlight en tu navegador:
 
 ## Creando contenido con Starlight
 
-Starlight admite la creación de contenido en Markdown y MDX.
+Starlight está listo para que añadas nuevo contenido o traigas tus archivos existentes.
 
-Puedes agregar nuevas páginas creando archivos `.md` o `.mdx` en la carpeta `src/content/docs/`. Por ejemplo, el archivo `src/content/docs/hello-world.md` estará disponible en tu sitio en la ruta `/hello-world`.
+### Formatos de archivo
 
-Todas las páginas de Starlight comparten un [conjunto común de propiedades frontmatter](/es/reference/frontmatter/) que puedes establecer para controlar cómo se muestra la página:
+Starlight admite la creación de contenido en Markdown y MDX. (Puedes agregar compatibilidad con Markdoc instalando la integración experimental de [Astro Markdoc](https://docs.astro.build/es/guides/integrations-guide/markdoc/).)
+
+### Agregar páginas
+
+Agrega nuevas páginas a tu sitio automáticamente creando archivos `.md` o `.mdx` en `src/content/docs/`. Agrega subcarpetas para organizar tus archivos y crear segmentos de ruta múltiples.
+
+```js
+`src/content/docs/hello-world.md` -> `tu-sitio/hello-world`
+`src/content/docs/guides/faq.md` -> `tu-sitio/guides/faq`
+```
+
+### Frontmatter con seguridad de tipos
+
+Todas las páginas de Starlight comparten un [conjunto común personalizable de propiedades frontmatter](/es/reference/frontmatter/) para controlar cómo se muestra la página:
 
 ```md
 ---
@@ -66,6 +81,6 @@ Si olvidas algo importante, Starlight te lo hará saber.
 
 ## Desplegando tu sitio web de Starlight
 
-Una vez que hayas creado y personalizado tu sitio web de Starlight, puedes desplegarlo en un servidor web o plataforma de hosting de tu elección. Astro proporciona soporte integrado para varios plataformas de hosting populares, como Netlify, Vercel y GitHub Pages, lo que significa que puedes desplegar tu sitio web con solo unos simples comandos.
+Una vez que hayas creado y personalizado tu sitio web de Starlight, puedes implementarlo en un servidor web o plataforma de alojamiento de tu elección, incluyendo Netlify, Vercel, GitHub Pages y muchos más.
 
 [Aprende sobre cómo desplegar un sitio Astro en la documentación de Astro.](https://docs.astro.build/es/guides/deploy/)
